--- a/src/apps/web/pomodoro_client/index.html
+++ b/src/apps/web/pomodoro_client/index.html
@@ -15,187 +15,7 @@
     <script defer type="module" src="js/main.js"></script>
 </head>
 <body>
-    <div class="app">
-        <header class="header">
-            <div class="logo">
-                <img class="logo__icon" src="assets/icons/pomodoro.svg" alt="Pomodoro tracker" />
-                <span class="logo__label">Pomodoro</span>
-            </div>
-
-            <div class="header__navigation">
-                <div>
-                    Профиль
-                </div>
-            </div>
-        </header>
-
-        <main class="main">
-            <div class="container">
-                <div class="timer_area">
-                    <div class="timer_area__timer">
-                        25:00
-                    </div>
-
-                    <div class="timer_area__description">
-                        Тестовая задача
-                    </div>
-
-                    <div class="timer_area__buttons">
-                        <button class="button timer_button">
-                            СТАРТ
-                        </button>
-                        <button class="button timer_button">
-                            ВЫПОЛНЕНО
-                        </button>
-                    </div>
-                </div>
-
-                <div class="plan_tasks">
-                    <div class="plan_tasks__title">
-                        <div class="plan_tasks__title_desc">
-                            ЗАПЛАНИРОВАНО
-                        </div>
-
-                        <div class="plan_tasks__title_tasks_count">
-                            5
-                        </div>
-
-                        <div class="plan_tasks__title_tasks_divider">
-                            /
-                        </div>
-
-                        <div class="plan_tasks__title_tasks_time">
-                            2ч 5мин
-                        </div>
-                    </div>
-
-                    <div class="plan_tasks__add">
-                        <input class="plan_tasks__add_category" placeholder="Категория" aria-label="категория">
-                        <input class="plan_tasks__add_description" placeholder="Описание" aria-label="описание">
-                        <button class="button plan_tasks__button">+</button>
-                    </div>
-
-                    <div class="plan_tasks__list">
-                        <ul class="plan_tasks__list_lst">
-                            <li>
-                                <div class="plan_task">
-                                    <div class="plan_task__category">
-                                        test
-                                    </div>
-                                    <div class="plan_task__description">
-                                        Тестовая задача 1
-                                    </div>
-                                    <div class="plan_task__count">
-                                        1
-                                    </div>
-                                    <button class="button plan_task__button">+</button>
-                                    <button class="button plan_task__button">-</button>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="plan_task">
-                                    <div class="plan_task__category">
-                                        test
-                                    </div>
-                                    <div class="plan_task__description">
-                                        Тестовая задача 2
-                                    </div>
-                                    <div class="plan_task__count">
-                                        1
-                                    </div>
-                                    <button class="button plan_task__button">+</button>
-                                    <button class="button plan_task__button">-</button>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="plan_tasks__statistics">
-                        <div class="plan_tasks__statistics_title">
-                            <div>Следующий длинный перерыв</div>
-                            <div class="plan_tasks__statistics_title_time">12:00</div>
-                            <div>Время окончания</div>
-                            <div class="plan_tasks__statistics_title_time">18:00</div>
-                        </div>
-
-                        <div class="plan_tasks__statistics_categories">
-                            <span>
-                                Категории
-                            </span>
-                            <ul class="plan_tasks__statistics_categories_list">
-                                <li class="plan_tasks__statistics_categories_item">
-                                    test-1
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="archive_tasks">
-                    <div class="archive_tasks__title">
-                        <div class="archive_tasks__title_desc">
-                            СДЕЛАНО
-                        </div>
-
-                        <div class="archive_tasks__title_tasks_count">
-                            2
-                        </div>
-
-                        <div class="archive_tasks__title_tasks_divider">
-                            /
-                        </div>
-
-                        <div class="archive_tasks__title_tasks_time">
-                            30мин
-                        </div>
-                    </div>
-
-                    <div class="archive_tasks__header">
-                        <span class="archive_tasks__header_category">
-                            КАТЕГОРИЯ
-                        </span>
-                        <span class="archive_tasks__header_description">
-                            ОПИСАНИЕ
-                        </span>
-                    </div>
-
-                    <div class="archive_tasks__list">
-                        <ul class="plan_tasks__list_lst">
-                            <li>
-                                <div class="archive_task">
-                                    <div class="archive_task__category">
-                                        test
-                                    </div>
-                                    <div class="archive_task__description">
-                                        Тестовая задача 2
-                                    </div>
-                                </div>
-                            </li>
-
-                            <li></li>
-                        </ul>
-
-                    </div>
-
-                    <div class="archive_tasks__statistics">
-                        <div class="archive_tasks__statistics_categories">
-                            <span>
-                                Категории
-                            </span>
-                            <ul class="archive_tasks__statistics_categories_list">
-                                <li class="archive_tasks__statistics_categories_item">
-                                    test-1
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-
-        <footer class="footer">
-            Pomodoro timer
-        </footer>
+    <div id="root">
     </div>
 </body>
 </html>
