]Feature] Add Vite to client project
- Перевели проект клиента на бандлер Vite

--- a/src/apps/web/pomodoro_client/index.html
+++ b/src/apps/web/pomodoro_client/index.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
     <meta name="description" content="Pomodoro Tracker это приложение продуктивности разработанное для работы и учебы. Оставайтесь в фокусе и добивайтесь своих целей эффективно. Получите больше времени для жизни." />
     <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
 
     <link rel="icon" href="assets/icons/favicon.ico" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/global.css" />
 
     <title>Pomodoro</title>
-
-    <script defer type="module" src="js/main.js"></script>
-</head>
-<body>
-    <div id="root">
-    </div>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/js/main.js"></script>
+  </body>
 </html>
