--- a/src/apps/web/pomodoro_client/index.html
+++ b/src/apps/web/pomodoro_client/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/js/main.ts"></script>
+    <script type="module" src="/src/ts/main.ts"></script>
   </body>
 </html>
