--- a/src/apps/web/pomodoro_client/index.html
+++ b/src/apps/web/pomodoro_client/index.html
@@ -8,6 +8,7 @@
 
     <link rel="icon" href="assets/icons/favicon.ico" />
     <link rel="stylesheet" href="src/css/reset.css" />
+    <link rel="stylesheet" href="src/css/default_theme.css" />
     <link rel="stylesheet" href="src/css/global.css" />
 
     <title>Pomodoro</title>
