[Style] Add Montserrat Font to Timer Component and HTML
- Included Montserrat font in the index.html file to enhance typography across the application.
- Updated Timer.module.scss to apply the Montserrat font to the countdown timer, improving visual consistency and aesthetics.

--- a/src/apps/web/pomodoro_client/index.html
+++ b/src/apps/web/pomodoro_client/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
 
     <link rel="icon" href="assets/icons/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/reset.css" />
     <link rel="stylesheet" href="src/css/default_theme.css" />
     <link rel="stylesheet" href="src/css/dark_theme.css" />
